fixed the popup z-index

--- a/src/components/popup.module.css
+++ b/src/components/popup.module.css
@@ -52,7 +52,7 @@
   box-sizing: border-box;
 
   padding: 36px;
-  z-index: 1;
+  z-index: 100;
 
   top: 0px;
   bottom: 0px;
